canadensis_codegen_rust/tests/compile_pass/canadensis/RequestEnum.1.0.dsdl
#[canadensis(enum)]

uint2 topping

uint2 WHIPPED_CREAM = 0
uint2 DIPLOMAT_CREAM = 1
uint2 PASTRY_CREAM = 2
uint2 CREAM_CHEESE_FROSTING = 3

@sealed
---
# Response is not an enum
@union
uint8 applause
uint1 disregard
@sealed
