canadensis_codegen_rust/tests/compile_fail/enum_no_fields/canadensis/NoFields.1.0.dsdl

# No field -> no enum discriminant
#[canadensis(enum)]

uint3 VALUE0 = 0
uint3 VALUE1 = 1

@sealed